fix composer.json repositories section

--- a/composer.json
+++ b/composer.json
@@ -60,10 +60,7 @@
     "repositories": [
         {
             "type": "github",
-            "url": "https://github.com/archtechx/airwire",
-            "options": {
-                "symlink": false
-            }
+            "url": "https://github.com/archtechx/airwire"
         }
     ],
     "minimum-stability": "dev",
